# Key-Value-Store

./: .gitignore  .gitmodules  BloomFilter_8cpp.html  BloomFilter_8cpp__incl.map  BloomFilter_8cpp__incl.md5  BloomFilter_8hpp.html  BloomFilter_8hpp.js  BloomFilter_8hpp__dep__incl.map  BloomFilter_8hpp__dep__incl.md5  BloomFilter_8hpp__incl.map  BloomFilter_8hpp__incl.md5  BloomFilter_8hpp_source.html  CMakeLists.txt  FileOffset_8cpp.html  FileOffset_8cpp__incl.map  FileOffset_8cpp__incl.md5  FileOffset_8hpp.html  FileOffset_8hpp.js  FileOffset_8hpp__dep__incl.map  FileOffset_8hpp__dep__incl.md5  FileOffset_8hpp__incl.map  FileOffset_8hpp__incl.md5  FileOffset_8hpp_source.html  File_8cpp.html  File_8cpp__incl.map  File_8cpp__incl.md5  File_8hpp.html  File_8hpp.js  File_8hpp__dep__incl.map  File_8hpp__dep__incl.md5  File_8hpp__incl.map  File_8hpp__incl.md5  File_8hpp_source.html  Id_8cpp.html  Id_8cpp__incl.map  Id_8cpp__incl.md5  Id_8hpp.html  Id_8hpp.js  Id_8hpp__dep__incl.map  Id_8hpp__dep__incl.md5  (+497 more)
.github/workflows/: build.yml  coverage.yml  documentation.yml
docs/: Doxyfile
include/: BloomFilter.hpp  File.hpp  FileOffset.hpp  Id.hpp  Key.hpp  KeyValue.hpp  KeyValueStore.hpp  Log.hpp  LogicStorage.hpp  Record.hpp  RecordSerializer.hpp  Storage.hpp  TrieNode.hpp  TrieNodeSerializer.hpp  Value.hpp
include/model/: FileOffset.hpp  Id.hpp  InMemoryTrieNode.hpp  Key.hpp  KeyValue.hpp  Record.hpp  TrieNode.hpp  Value.hpp
include/serializer/: RecordSerializer.hpp  TrieNodeSerializer.hpp
include/storage/: BloomFilter.hpp  File.hpp  Log.hpp  LogicStorage.hpp  Storage.hpp  Trie.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  files_7.js  files_8.js  files_9.js  functions_0.js  (+24 more)
src/: BloomFilter.cpp  File.cpp  FileOffset.cpp  Id.cpp  Key.cpp  KeyValue.cpp  KeyValueStore.cpp  Log.cpp  Record.cpp  RecordSerializer.cpp  TrieNode.cpp  TrieNodeSerializer.cpp  Value.cpp  benchmark.cpp  main.cpp
src/model/: FileOffset.cpp  Id.cpp  InMemoryTrieNode.cpp  Key.cpp  KeyValue.cpp  Record.cpp  TrieNode.cpp  Value.cpp
src/serializer/: RecordSerializer.cpp  TrieNodeSerializer.cpp
src/storage/: BloomFilter.cpp  File.cpp  Log.cpp  Trie.cpp
test/: BloomFilterTest.cpp  CMakeLists.txt  FileTest.cpp  LogTest.cpp  RecordSerializerTest.cpp  RecordStorageTest.cpp  TrieNodeSerializerTest.cpp  TrieNodeStorageTest.cpp  TrieTest.cpp  main.cpp  test.cpp  testing.h
test/model/: KeyTest.cpp  KeyValueTest.cpp  ValueTest.cpp
test/serializer/: RecordSerializerTest.cpp  TrieNodeSerializerTest.cpp
test/storage/: BloomFilterTest.cpp  FileTest.cpp  KeyValueStoreTest.cpp  LogTest.cpp  RecordStorageTest.cpp  TrieNodeStorageTest.cpp  TrieTest.cpp
